--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+@import './styles/partials/mixins';
+@import './styles/partials/variables';
+
+/* imported font */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
+
+/* global styles */
+html,
+body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Nunito', Helvetica Neue, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+    font-size: 62.5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    font-size: 1.6rem;
+    background: $background-color;
+    color: $primary-text;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ol,
+ul {
+    list-style: none;
+    padding: 10;
 }
 
-.App-link {
-  color: #61dafb;
+li,
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+    color: $primary-text;
+    cursor: pointer;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+.page-container {
+    position: relative;
+    min-height: 100vh;
+
+    &__content-wrap {
+        padding-bottom: 6rem;
+    }
 }
